cmake_minimum_required(VERSION 3.18)
project(ParTI)

set(TEST_SRCS "test_ttm.cpp")

foreach(TEST_SRC IN LISTS TEST_SRCS)
    get_filename_component(TEST_EXE "${TEST_SRC}" NAME_WE)
    if(USE_CUDA)
        add_executable("${TEST_EXE}" "${TEST_SRC}" ${BACKWARD_ENABLE})
    else()
        add_executable("${TEST_EXE}" "${TEST_SRC}" ${BACKWARD_ENABLE})
    endif()
    set_target_properties("${TEST_EXE}" PROPERTIES C_STANDARD 99)
    set_target_properties("${TEST_EXE}" PROPERTIES CXX_STANDARD 14)
    if(BUILD_STATIC)
        target_link_libraries("${TEST_EXE}" ParTI_s)
    else()
        target_link_libraries("${TEST_EXE}" ParTI)
    endif()
    add_backward("${TEST_EXE}")
endforeach(TEST_SRC)
